Including contact and products pages.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
         <header>
             <div class="box">
                 <h1>
-                    <img src="_imagens/vib-sistemas-logo-250px-sem-bg.png" alt="VIB Sistemas Logo">
+                    <img src="_images/vib-sistemas-logo-250px-without-bg.png" alt="VIB Sistemas Logo">
                 </h1>
     
                 <nav>
@@ -22,16 +22,15 @@
                     </ul>
                 </nav>
             </div>
-
         </header>
 
-        <img class="banner" src="_imagens/banner-company-800-400.jpg">
+        <img class="banner" src="_images/banner-company-800-400.jpg">
 
         <main>
             <section class="main-section">
                 
                 <h2 class="main-title">About VIB Sistemas</h2>
-                <p>Located in the western region of Santa Catarina, in the city of Pinhalzinho, <strong>VIB Sistemas</strong> is a fictional company that was born out of a personal need: to study web development, starting at the front end :).</p>
+                <p>Located in the south of Brazil, western region of Santa Catarina state, in the city of Pinhalzinho, <strong>VIB Sistemas</strong> is a fictional company that was born out of a personal need: to study web development, starting at the front end :).</p>
 
                 <h2 class="main-title">Mission</h2>
                 <p id="mission"><em><strong>"Provide an example web page for my personal portfolio".</strong></em></p>
@@ -41,15 +40,15 @@
             <section class="benefits">
                 <h3 class="main-title">Benefits</h3>
                 <ul>
-                    <li class="itens">Customer Service</li>
-                    <li class="itens">Qualified Professionals</li>
-                    <li class="itens">Speed</li>
+                    <li class="items">Customer Service</li>
+                    <li class="items">Qualified Professionals</li>
+                    <li class="items">Speed</li>
                 </ul>
             </section>
         </main>
 
         <footer>
-            <img src="_imagens/vib-sistemas-logo-250px-sem-bg.png" alt="VIB Sistemas Logo">
+            <img src="_images/vib-sistemas-logo-250px-without-bg.png" alt="VIB Sistemas Logo">
             <p class="copyright">&copy; Copyright VIB Sistemas - 2020</p>
         </footer>
     </body>
