Visual adjusts in the index page.

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             </div>
         </header>
 
-        <main>
+        <main class="main-contact">
             <form>
                 <label for="namesurname">Name and surname</label>
                 <input type="text" id="namesurname" class="input-default" required>
