--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>VIB Sistemas</title>
         <link rel="stylesheet" type="text/css" href="_css/reset.css">
         <link rel="stylesheet" type="text/css" href="_css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
     </head>
     <body>
         <header>
@@ -28,22 +29,33 @@
 
         <main>
             <section class="main-section">
-                
                 <h2 class="main-title">About VIB Sistemas</h2>
-                <p>Located in the south of Brazil, western region of Santa Catarina state, in the city of Pinhalzinho, <strong>VIB Sistemas</strong> is a fictional company that was born out of a personal need: to study web development, starting at the front end :).</p>
+                <p>We are the <strong>VIB Sistemas</strong>. A fictional company that was born out of a personal need: to study web development, starting at the front end :).</p>
 
-                <h2 class="main-title">Mission</h2>
-                <p id="mission"><em><strong>"Provide an example web page for my personal portfolio".</strong></em></p>
+                <div class="mission">
+                    <h3 class="main-title">Mission</h3>
+                    <p id="mission"><em><strong>"Provide an example web page for my personal portfolio".</strong></em></p>
+                </div>
+            </section>
 
+            <section class="map">
+                <h3 class="main-title">Location</h3>
+                <p>Located in the western region of the state of Santa Catarina, south of Brazil. Our company is located in Pinhalzinho. Feel free to visit us!</p>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113940.80931482965!2d-53.04678892875886!3d-26.81926162743877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fb209c28293f23%3A0x459c83f3cc72012d!2sPinhalzinho%20-%20SC!5e0!3m2!1spt-BR!2sbr!4v1611942494524!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </section>
 
             <section class="benefits">
                 <h3 class="main-title">Benefits</h3>
-                <ul>
-                    <li class="items">Customer Service</li>
-                    <li class="items">Qualified Professionals</li>
-                    <li class="items">Speed</li>
-                </ul>
+
+                <div class="benefits-content">
+                    <ul class="benefits-list">
+                        <li class="items">Customer Service</li>
+                        <li class="items">Qualified Professionals</li>
+                        <li class="items">Speed</li>
+                    </ul><img class="about-img" src="_images/about-image.jpg" alt="A person working at a desktop">
+                </div>
+                
             </section>
         </main>
 
