Adjustments to provide responsiveness on smartphone pages.

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Contact - VIB Sistemas</title>
         <link rel="stylesheet" type="text/css" href="_css/reset.css">
         <link rel="stylesheet" type="text/css" href="_css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
     </head>
     <body>
         <header>
@@ -24,7 +26,7 @@
         </header>
 
         <main class="main-contact">
-            <form>
+            <form class="form-contact">
                 <label for="namesurname">Name and surname</label>
                 <input type="text" id="namesurname" class="input-default" required>
 
