--- a/products.html
+++ b/products.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Products - VIB Sistemas</title>
         <link rel="stylesheet" type="text/css" href="_css/reset.css">
         <link rel="stylesheet" type="text/css" href="_css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
     </head>
     <body>
         <header>
@@ -24,20 +26,22 @@
         </header>
 
         <main>
-            <ul class="products">
-                <li>
-                    <h2>VIB Contas</h2>
-                    <img src="_images/vib-contas-icon-250px.png">
-                    <p class="product-description">Manage your bills with this incredible web platform integrated with mobile app</p>
-                    <p class="product-price">USD 69.90 per Month</p>
-                </li>
-                <li>
-                    <h2>VIB Supermercado</h2>
-                    <img src="_images/vib-supermarket-250px.png">
-                    <p class="product-description">Make a digital checklist of what is needed to buy in the supermarket with this super app</p>
-                    <p class="product-price">USD 5.99 per Month</p>
-                </li>
-            </ul>
+            <section class="products-section">
+                <ul class="products">
+                    <li>
+                        <h2>VIB Contas</h2>
+                        <img src="_images/vib-contas-icon-250px.png">
+                        <p class="product-description">Manage your bills with this incredible web platform integrated with mobile app</p>
+                        <p class="product-price">USD 69.90 per Month</p>
+                    </li>
+                    <li>
+                        <h2>VIB Supermercado</h2>
+                        <img src="_images/vib-supermarket-250px.png">
+                        <p class="product-description">Make a digital checklist of what is needed to buy in the supermarket in the app</p>
+                        <p class="product-price">USD 5.99 per Month</p>
+                    </li>
+                </ul>
+            </section>
         </main>
 
         <footer>
