--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width">
         <title>VIB Sistemas</title>
         <link rel="stylesheet" type="text/css" href="_css/reset.css">
         <link rel="stylesheet" type="text/css" href="_css/style.css">
@@ -12,7 +12,7 @@
         <header>
             <div class="box">
                 <h1>
-                    <img src="_images/vib-sistemas-logo-250px-without-bg.png" alt="VIB Sistemas Logo">
+                    <img src="_images/vib-sistemas-logo-250px-without-bg.png" alt="Logo da VIB Sistemas">
                 </h1>
     
                 <nav>
@@ -30,19 +30,21 @@
         <main>
             <section class="main-section">
                 <h2 class="main-title">About VIB Sistemas</h2>
-                <p>We are the <strong>VIB Sistemas</strong>. A fictional company that was born out of a personal need: to study web development, starting at the front end :).</p>
+                <p>We are the <strong>VIB Sistemas</strong>. A fictional company that was born out of a personal need: to study web development, starting at the front end.</p>
+            </section>
 
-                <div class="mission">
-                    <h3 class="main-title">Mission</h3>
-                    <p id="mission"><em><strong>"Provide an example web page for my personal portfolio".</strong></em></p>
-                </div>
+            <section class="mission">
+                <h3 class="main-title">Mission</h3>
+                <p id="mission"><em><strong>"Provide an example web page for my personal portfolio".</strong></em></p>
             </section>
 
             <section class="map">
                 <h3 class="main-title">Location</h3>
                 <p>Located in the western region of the state of Santa Catarina, south of Brazil. Our company is located in Pinhalzinho. Feel free to visit us!</p>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113940.80931482965!2d-53.04678892875886!3d-26.81926162743877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fb209c28293f23%3A0x459c83f3cc72012d!2sPinhalzinho%20-%20SC!5e0!3m2!1spt-BR!2sbr!4v1611942494524!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="map-content">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113940.80931482965!2d-53.04678892875886!3d-26.81926162743877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fb209c28293f23%3A0x459c83f3cc72012d!2sPinhalzinho%20-%20SC!5e0!3m2!1spt-BR!2sbr!4v1611942494524!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
             </section>
 
             <section class="benefits">
@@ -55,7 +57,6 @@
                         <li class="items">Speed</li>
                     </ul><img class="about-img" src="_images/about-image.jpg" alt="A person working at a desktop">
                 </div>
-                
             </section>
         </main>
 
